--- a/public/index.css
+++ b/public/index.css
@@ -17,6 +17,13 @@ body {
   flex-direction: row;
 }
 
+.transfer-panel {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 200px;
+}
+
 .side-panel {
   background: #ffffff;
   box-shadow: 23.8596px 5.61404px 50px rgba(0, 0, 0, 0.02),
@@ -82,7 +89,36 @@ body {
   justify-content: space-between;
 }
 
-form {
+#transfer-form {
+  border: 1px solid grey;
+  background: #fff;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 50%;
+  left: 320px;
+  width: calc(98% - 360px);
+}
+
+#transfer-form input {
+  border: 0;
+  outline: none;
+  padding: 20px;
+  width: calc(94% - 120px);
+}
+
+#transfer-form button {
+  color: white;
+  background: url('./assets/send-icon.png');
+  background-size: contain;
+  border: none;
+  margin: 10px;
+  padding: 20px;
+  height: 40px;
+  width: 40px;
+}
+
+#form {
   border-top: 1px solid grey;
   background: #fff;
   display: flex;
@@ -93,7 +129,7 @@ form {
   width: calc(98% - 360px);
 }
 
-form input {
+#form input {
   border: 0;
   outline: none;
   padding: 20px;
@@ -105,7 +141,7 @@ input::placeholder {
   font-style: italic;
 }
 
-form button {
+#form button {
   color: white;
   background: url('./assets/send-icon.png');
   background-size: contain;
@@ -265,7 +301,7 @@ form button {
     height: calc(100% - 80px);
   }
 
-  form {
+  #form {
     border-top: none;
     left: 2%;
     width: 96%;
